Update readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learning-webpack",
+  "name": "laravel-react-webpack-infinite-scroll-custom",
   "version": "1.0.0",
   "description": "",
   "private": true,
